--- a/.glzr/glazewm/config.yaml
+++ b/.glzr/glazewm/config.yaml
@@ -153,12 +153,13 @@ window_rules:
       - window_title: { regex: "Voice" }
   - commands: ["move --workspace 7"]
     match:
-      - window_process: { regex: "blender|SketchUp|3dsmax" }
+      - window_process: { regex: "blender|SketchUp|3dsmax|AfterFX" }
       - window_title:
           {
             regex: "C:\\Program Files\\Blender Foundation\\Blender 4.2\\blender.exe",
             "C:\\Program Files\\SketchUp\\SketchUp 2021\\SketchUp.exe",
             "C:\\Program Files\\Autodesk\\3ds Max 2022\\3dsmax.exe",
+            "C:\\Program Files\\Adobe\\Adobe After Effects 2025\\Support Files\\AfterFX.exe",
           }
   - commands: ["ignore"]
     match:
